debugging module import issues

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "simplegoogleauthwrapper",
-    "version": "1.0.1",
+    "name": "google-auth-wrapper",
+    "version": "1.0.2",
     "description": "A Simple wrapper for google authentication using passport",
-    "main": "GoogleAuth.js",
+    "main": "index.js",
     "author": "CoreParadox",
     "dependencies": {
         "passport": "^0.3.2",
