Fixed index.d.ts - still not sure how to generate this file reliably

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
     "compilerOptions": {
-        "module": "amd",
-        "outFile": "../index.js",
+        "module": "commonjs",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": false,
-        "declaration": true,
         "target": "es2017",       
         "lib": [
             "es2017",
