--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "google-auth-wrapper",
     "version": "1.0.2",
     "description": "A Simple wrapper for google authentication using passport",
-    "main": "index.js",
+    "main": "GoogleAuth.js",
     "author": "CoreParadox",
     "dependencies": {
         "passport": "^0.3.2",
